# ouestcharlie-woof

./: .gitignore  .mcpbignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_DEV.md  manifest.json  pyproject.toml  pyproject_packaging.toml  woof_LLD.md  woof_LLD_rationale.md  woof_LLR.md
.claude/: CLAUDE.md
.claude/commands/: install-plugins.md
.github/: dependabot.yml
.github/workflows/: _build.yml  build.yml  publish.yml
doc/design/: woof_LLD.md  woof_LLR.md
gallery/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
gallery/src/: App.svelte  App.test.js  global.css  test-setup.js
gallery/src/components/: IndexingProgress.svelte  IndexingProgress.test.js  PhotoGrid.svelte  PhotoGrid.test.js  PreviewPanel.svelte  PreviewPanel.test.js  SearchForm.svelte
src/woof/: __init__.py  __main__.py  agent_client.py  config.py  gallery_session_manager.py  http_server.py  indexing_session_manager.py  server.py
tests/: test_config.py  test_gallery_session_manager.py  test_http_server.py  test_indexing_session_manager.py  test_server.py
tests_integration/: conftest.py  test_startup.py
